Added menus for interface and module hierarchies.

--- a/Engine/Resources/Translations/NaturalDocs.Engine.default.txt
+++ b/Engine/Resources/Translations/NaturalDocs.Engine.default.txt
@@ -43,6 +43,8 @@ HTML.Close: Close
 Menu.Files: Files
 Menu.Classes: Classes
 Menu.Database: Database
+Menu.Interfaces: Interfaces
+Menu.Modules: Modules
 
 Timestamp.Month1: January
 Timestamp.ShortMonth1: Jan
